project-shopping-cart/src/styles/NavBar.css
/* NavBar Component  */
/* classes: navBar, checkoutBtn, cart, cartCount */
.navBar {
  width: 100%;
  height: 4em;
  margin: 0;

  top: 0;
  left: 0;
  position: fixed;

  display: flex;
  justify-content: flex-end;

  background-color: #252525;
}

.navBar ul {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 15px;

  list-style: none;
}

.navBar button {
  max-height: 40px;

  display: flex;
  gap: 5px;
}

.navBar img {
  height: 20px;
}

@media (prefers-color-scheme: light) {
  .navBar {
    background-color: #e0e0e0;
  }
}

